--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/Payment/PaymentTableViewCell/PaymentTableViewCell.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/Payment/PaymentTableViewCell/PaymentTableViewCell.xib
@@ -3,12 +3,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="tOA-Ix-I2L" customClass="PaymentTableViewCell" customModule="PositionIn" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="tOA-Ix-I2L" customClass="PaymentTableViewCell" customModule="PositionIn" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="478" height="122"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tOA-Ix-I2L" id="5Zi-6C-BNu">
@@ -19,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="478" height="82"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Kenya Red Cross Society" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9NB-rZ-4Ld">
-                                <rect key="frame" x="80" y="33" width="390" height="20.5"/>
+                                <rect key="frame" x="80" y="33" width="390" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -61,16 +60,16 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JoU-Ph-6qa" userLabel="TotalView">
-                        <rect key="frame" x="0.0" y="81" width="478" height="40.5"/>
+                        <rect key="frame" x="0.0" y="81" width="478" height="41"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6b-5e-7IA">
-                                <rect key="frame" x="8" y="0.5" width="32" height="40.5"/>
+                                <rect key="frame" x="8" y="1" width="32" height="40"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfm-v9-77B">
-                                <rect key="frame" x="43" y="0.0" width="427" height="40.5"/>
+                                <rect key="frame" x="43" y="0.0" width="427" height="41"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -111,14 +110,20 @@
                     <constraint firstItem="JoU-Ph-6qa" firstAttribute="top" secondItem="WLP-Dx-gGs" secondAttribute="bottom" constant="-1" id="0ta-KV-M5C"/>
                     <constraint firstItem="JoU-Ph-6qa" firstAttribute="leading" secondItem="5Zi-6C-BNu" secondAttribute="leading" id="AYm-GO-0AB"/>
                     <constraint firstAttribute="trailing" secondItem="WLP-Dx-gGs" secondAttribute="trailing" id="BeA-M3-FTo"/>
+                    <constraint firstAttribute="bottom" secondItem="JoU-Ph-6qa" secondAttribute="bottom" id="EbO-WV-hDC"/>
                     <constraint firstItem="WLP-Dx-gGs" firstAttribute="leading" secondItem="5Zi-6C-BNu" secondAttribute="leading" id="GFO-tV-dzZ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="JoU-Ph-6qa" secondAttribute="bottom" constant="-8" id="SXi-DJ-xXR"/>
                     <constraint firstItem="WLP-Dx-gGs" firstAttribute="top" secondItem="5Zi-6C-BNu" secondAttribute="top" id="TBG-W8-cHL"/>
+                    <constraint firstAttribute="trailing" secondItem="JoU-Ph-6qa" secondAttribute="trailing" id="Yf0-ZB-tnu"/>
+                    <constraint firstItem="JoU-Ph-6qa" firstAttribute="leading" secondItem="5Zi-6C-BNu" secondAttribute="leading" id="aMp-Xd-Edh"/>
+                    <constraint firstItem="JoU-Ph-6qa" firstAttribute="top" secondItem="WLP-Dx-gGs" secondAttribute="bottom" constant="-1" id="fnP-Ms-C9c"/>
                     <constraint firstAttribute="trailing" secondItem="JoU-Ph-6qa" secondAttribute="trailing" id="gpF-gF-85c"/>
                     <constraint firstAttribute="bottom" secondItem="JoU-Ph-6qa" secondAttribute="bottom" id="p8V-zT-8JE"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="0ta-KV-M5C"/>
+                        <exclude reference="AYm-GO-0AB"/>
+                        <exclude reference="gpF-gF-85c"/>
                         <exclude reference="p8V-zT-8JE"/>
                     </mask>
                 </variation>
