fix feautered cell image resize

--- a/PositionIn/FeedListViewController/Views/FeauteredFeedTableViewCell/FeauteredFeedTableViewCell.xib
+++ b/PositionIn/FeedListViewController/Views/FeauteredFeedTableViewCell/FeauteredFeedTableViewCell.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="283.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fih-EF-5HZ">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fih-EF-5HZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="284" id="MPP-hk-0tt"/>
