--- a/PositionIn/Views/CommentCell/PositionIn.CommentCell.xib
+++ b/PositionIn/Views/CommentCell/PositionIn.CommentCell.xib
@@ -1,85 +1,87 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PositionIn.CommentCell" rowHeight="86" id="v8M-6B-ZG5" customClass="CommentCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="317" height="86"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PositionIn.CommentCell" rowHeight="117" id="v8M-6B-ZG5" customClass="CommentCell" customModule="PositionIn" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="317" height="121"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="v8M-6B-ZG5" id="Dqh-Bo-qXP">
+                <rect key="frame" x="0.0" y="0.0" width="317" height="120.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfW-dp-Eo5" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
-                        <rect key="frame" x="13" y="13" width="50" height="50"/>
-                        <color key="backgroundColor" red="0.97254901959999995" green="0.83921568629999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="50" id="E4K-OZ-hyc"/>
-                            <constraint firstAttribute="height" constant="50" id="TEt-2y-veM"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
-                                <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ev-k8-dOD" userLabel="LabelsContainer">
-                        <rect key="frame" x="71" y="0.0" width="246" height="85"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ev-k8-dOD" userLabel="Container">
+                        <rect key="frame" x="0.0" y="8" width="317" height="105"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pif-sd-dGN" userLabel="NameLabel">
-                                <rect key="frame" x="0.0" y="0.0" width="238" height="20"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jC6-Fv-csn" userLabel="DateLabel">
+                                <rect key="frame" x="74" y="44" width="234" height="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="13"/>
+                                <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pif-sd-dGN" userLabel="NameLabel">
+                                <rect key="frame" x="74" y="12" width="234" height="20"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jC6-Fv-csn" userLabel="DateLabel">
-                                <rect key="frame" x="0.0" y="68" width="238" height="17"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                <color key="textColor" red="0.74901960779999999" green="0.74901960779999999" blue="0.74901960779999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5RN-WH-csu" userLabel="CommentLabel">
-                                <rect key="frame" x="0.0" y="25" width="238" height="38"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                            <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="LfW-dp-Eo5" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
+                                <rect key="frame" x="12" y="12" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="E4K-OZ-hyc"/>
+                                    <constraint firstAttribute="height" constant="50" id="TEt-2y-veM"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5RN-WH-csu" userLabel="CommentLabel">
+                                <rect key="frame" x="74" y="74" width="234" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.23529411764705882" green="0.23529411764705882" blue="0.23529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5RN-WH-csu" firstAttribute="top" secondItem="pif-sd-dGN" secondAttribute="bottom" constant="5" id="INT-Y6-FVs"/>
-                            <constraint firstAttribute="bottom" secondItem="jC6-Fv-csn" secondAttribute="bottom" id="PjH-9E-WAj"/>
-                            <constraint firstItem="jC6-Fv-csn" firstAttribute="leading" secondItem="4Ev-k8-dOD" secondAttribute="leading" id="VAw-b2-Qxq"/>
-                            <constraint firstAttribute="trailing" secondItem="pif-sd-dGN" secondAttribute="trailing" constant="8" id="aYH-Pl-Fla"/>
-                            <constraint firstItem="pif-sd-dGN" firstAttribute="top" secondItem="4Ev-k8-dOD" secondAttribute="top" id="b1x-D8-faG"/>
-                            <constraint firstItem="pif-sd-dGN" firstAttribute="leading" secondItem="4Ev-k8-dOD" secondAttribute="leading" id="bBE-BN-RwM"/>
-                            <constraint firstItem="jC6-Fv-csn" firstAttribute="top" secondItem="5RN-WH-csu" secondAttribute="bottom" constant="5" id="ber-bB-M30"/>
-                            <constraint firstItem="5RN-WH-csu" firstAttribute="leading" secondItem="4Ev-k8-dOD" secondAttribute="leading" id="eBK-Ms-SI3"/>
-                            <constraint firstAttribute="trailing" secondItem="5RN-WH-csu" secondAttribute="trailing" constant="8" id="fO4-Vm-bKu"/>
-                            <constraint firstAttribute="trailing" secondItem="jC6-Fv-csn" secondAttribute="trailing" constant="8" id="gjL-RR-tXn"/>
+                            <constraint firstAttribute="bottom" secondItem="5RN-WH-csu" secondAttribute="bottom" constant="8" id="6RP-ko-ZgK"/>
+                            <constraint firstItem="jC6-Fv-csn" firstAttribute="leading" secondItem="pif-sd-dGN" secondAttribute="leading" id="9h0-Rf-ZSl"/>
+                            <constraint firstItem="jC6-Fv-csn" firstAttribute="top" secondItem="pif-sd-dGN" secondAttribute="bottom" constant="12" id="PKr-W6-3kA"/>
+                            <constraint firstAttribute="trailing" secondItem="pif-sd-dGN" secondAttribute="trailing" constant="8" id="PY5-VW-sF8"/>
+                            <constraint firstAttribute="trailing" secondItem="5RN-WH-csu" secondAttribute="trailing" constant="8" id="ZNa-RQ-l3v"/>
+                            <constraint firstAttribute="trailing" secondItem="jC6-Fv-csn" secondAttribute="trailing" constant="9" id="hv3-yW-rno"/>
+                            <constraint firstItem="5RN-WH-csu" firstAttribute="leading" secondItem="pif-sd-dGN" secondAttribute="leading" id="i2T-7b-qq0"/>
+                            <constraint firstItem="pif-sd-dGN" firstAttribute="top" secondItem="4Ev-k8-dOD" secondAttribute="top" constant="12" id="idw-F9-Lpz"/>
+                            <constraint firstItem="pif-sd-dGN" firstAttribute="leading" secondItem="LfW-dp-Eo5" secondAttribute="trailing" constant="12" id="kLp-qK-UVu"/>
+                            <constraint firstItem="5RN-WH-csu" firstAttribute="top" secondItem="jC6-Fv-csn" secondAttribute="bottom" constant="12" id="kQe-hN-MK3"/>
+                            <constraint firstItem="LfW-dp-Eo5" firstAttribute="leading" secondItem="4Ev-k8-dOD" secondAttribute="leading" constant="12" id="rWJ-LB-JoT"/>
+                            <constraint firstItem="LfW-dp-Eo5" firstAttribute="top" secondItem="4Ev-k8-dOD" secondAttribute="top" constant="12" id="sXp-wD-xf6"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadios" value="10"/>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="LfW-dp-Eo5" firstAttribute="leading" secondItem="Dqh-Bo-qXP" secondAttribute="leading" constant="13" id="2DG-sM-L0I"/>
-                    <constraint firstItem="4Ev-k8-dOD" firstAttribute="leading" secondItem="LfW-dp-Eo5" secondAttribute="trailing" constant="8" id="aHU-Cv-rfG"/>
-                    <constraint firstAttribute="trailing" secondItem="4Ev-k8-dOD" secondAttribute="trailing" id="fyD-PZ-1nt"/>
-                    <constraint firstItem="LfW-dp-Eo5" firstAttribute="top" secondItem="Dqh-Bo-qXP" secondAttribute="top" constant="13" id="iKK-JQ-GfY"/>
-                    <constraint firstItem="4Ev-k8-dOD" firstAttribute="top" secondItem="Dqh-Bo-qXP" secondAttribute="top" id="sZP-Vn-Y6d"/>
-                    <constraint firstAttribute="bottom" secondItem="4Ev-k8-dOD" secondAttribute="bottom" id="v6F-LW-hf2"/>
+                    <constraint firstItem="4Ev-k8-dOD" firstAttribute="top" secondItem="Dqh-Bo-qXP" secondAttribute="top" constant="8" id="20f-iy-IJx"/>
+                    <constraint firstAttribute="bottom" secondItem="4Ev-k8-dOD" secondAttribute="bottom" constant="8" id="57T-DH-UOt"/>
+                    <constraint firstAttribute="trailing" secondItem="4Ev-k8-dOD" secondAttribute="trailing" id="tWc-XE-Hfg"/>
+                    <constraint firstItem="4Ev-k8-dOD" firstAttribute="leading" secondItem="Dqh-Bo-qXP" secondAttribute="leading" id="xAa-Fr-EJU"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="avatarView" destination="LfW-dp-Eo5" id="zJa-1x-hKp"/>
                 <outlet property="commentLabel" destination="5RN-WH-csu" id="GK2-VV-hdi"/>
+                <outlet property="containerView" destination="4Ev-k8-dOD" id="WSZ-a2-YVG"/>
                 <outlet property="dateLabel" destination="jC6-Fv-csn" id="GL6-Fv-Rz0"/>
                 <outlet property="userNameLabel" destination="pif-sd-dGN" id="7U2-jN-YWE"/>
             </connections>
-            <point key="canvasLocation" x="446.5" y="215"/>
+            <point key="canvasLocation" x="446.5" y="191.5"/>
         </tableViewCell>
     </objects>
 </document>
