--- a/PositionIn/Views/PostCells/PositionIn.PostImageCell.xib
+++ b/PositionIn/Views/PostCells/PositionIn.PostImageCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -30,6 +30,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentImage" destination="T4P-AO-QzC" id="MHV-Ut-We5"/>
+                <outlet property="imageHeightConstaint" destination="VNW-UM-5Ev" id="2e0-ke-flo"/>
             </connections>
             <point key="canvasLocation" x="446" y="216"/>
         </tableViewCell>
